[gd_scene load_steps=11 format=3 uid="uid://do78jpwb3hr3y"]

[ext_resource type="Script" path="res://scripts/menus/server_menu.gd" id="1_cp11a"]
[ext_resource type="Shader" path="res://resources/shaders/text_button.gdshader" id="3_tyrs8"]
[ext_resource type="PackedScene" uid="uid://jsg3njon7m1i" path="res://scenes/gui/text_button.tscn" id="3_xpg2w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsvfq"]
bg_color = Color(0.4, 0.3754, 0.364, 0.392157)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.890196, 0.854902, 0.737255, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4oexk"]
bg_color = Color(0.76, 0.722, 0.608, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.611765, 0.568627, 0.419608, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_h0fwc"]
font_size = 50
font_color = Color(0.290196, 0.270588, 0.211765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2lta"]
bg_color = Color(0.94, 0.904907, 0.8084, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.61, 0.569028, 0.4209, 0)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="LabelSettings" id="LabelSettings_ulyi6"]
font_size = 90
font_color = Color(0.290196, 0.270588, 0.211765, 1)
outline_size = 50
outline_color = Color(0.941176, 0.905882, 0.807843, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_i5cib"]
resource_local_to_scene = true
shader = ExtResource("3_tyrs8")
shader_parameter/highlighted = false
shader_parameter/brightness = 0.6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aey6n"]
resource_local_to_scene = true
shader = ExtResource("3_tyrs8")
shader_parameter/highlighted = false
shader_parameter/brightness = 0.6

[node name="ServerMenu" type="Control"]
custom_minimum_size = Vector2(1400, 1000)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cp11a")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 155.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tsvfq")

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 25.0
offset_right = -40.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ServersVBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="NothingFoundPanel" type="Control" parent="Panel/ScrollContainer/ServersVBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="Panel" type="Panel" parent="Panel/ScrollContainer/ServersVBoxContainer/NothingFoundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4oexk")

[node name="Label" type="Label" parent="Panel/ScrollContainer/ServersVBoxContainer/NothingFoundPanel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -84.0
grow_horizontal = 2
grow_vertical = 0
text = "Nothing found..."
label_settings = SubResource("LabelSettings_h0fwc")
horizontal_alignment = 1

[node name="ServerPanels" type="VBoxContainer" parent="Panel/ScrollContainer/ServersVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeadPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 110)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e2lta")

[node name="Label" type="Label" parent="HeadPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Servers     Browser"
label_settings = SubResource("LabelSettings_ulyi6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15
alignment = 2

[node name="BackTextButton" parent="HBoxContainer" instance=ExtResource("3_xpg2w")]
material = SubResource("ShaderMaterial_i5cib")
layout_mode = 2
text = "Back"

[node name="CreateTextButton" parent="HBoxContainer" instance=ExtResource("3_xpg2w")]
material = SubResource("ShaderMaterial_aey6n")
layout_mode = 2
text = "Create new"

[connection signal="button_pressed" from="HBoxContainer/BackTextButton" to="." method="_on_back_text_button_pressed"]
[connection signal="button_pressed" from="HBoxContainer/CreateTextButton" to="." method="_on_create_text_button_pressed"]
